--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>spring-web</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -44,6 +48,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -70,23 +75,6 @@
             <version>${wiremock.version}</version>
             <scope>test</scope>
         </dependency>
-
-        <!-- TRY apache http client : WIP-->
-
-        <dependency>
-            <groupId>org.apache.httpcomponents.client5</groupId>
-            <artifactId>httpclient5</artifactId>
-            <version>5.3.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.httpcomponents.client5</groupId>
-            <artifactId>httpclient5-cache</artifactId>
-            <version>5.3.1</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <build>
